# AI-Learning-Journey

./: .gitignore
rag-doctor/: .gitignore  README.md  pyproject.toml  requirements.txt  run_demo.py
rag-doctor/.github/workflows/: ci.yml
rag-doctor/.rag-doctor/: index.json
rag-doctor/docs/: learn.md  learning-04-27.md
rag-doctor/examples/: sample_questions.json
rag-doctor/examples/sample_docs/: company_handbook.txt  nlp_job_notes.md  rag_notes.md
rag-doctor/reports/: report.html
rag-doctor/src/rag_doctor/: __init__.py  chunker.py  cli.py  embedder.py  evaluate.py  load_documents.py  qa.py  retriever.py
rag-doctor/tests/: test_chunker.py  test_qa.py  test_retriever.py
